# ai-e2e-project

./: .gitignore  Makefile  README.md  project-requirements.md
.github/workflows/: eval-nightly.yml  tests.yml
data/: README.md  customers.csv  order_items.csv  orders.csv  products.csv
data/kba/: account-management.html  index.html  payment-methods.html  product-warranty.html  returns-and-refunds.html  shipping-policy.html
deploy/: README.md
deploy/helm/shop-chat/: Chart.yaml  values.yaml
deploy/helm/shop-chat/templates/: _helpers.tpl  backend-deployment.yaml  backend-route.yaml  backend-service.yaml  (+6 more)
docs/: concepts-summary.md  eval.md  guardrails.md  langfuse-observability.md  self-correcting-agent-design.md  test-strategy.md
eval/: README.md  assertions.py  conftest.py  pyproject.toml  run_eval.py  test_golden_set.py
eval/cases/: edge_cases.yaml  guardrail_injection.yaml  guardrail_off_topic.yaml  happy_path.yaml  kb_articles.yaml  rbac.yaml  safe_passthrough.yaml
mcp-server/: README.md  pyproject.toml  test_server.py  test_server_integration.py
mcp-server/src/shop_mcp_server/: __init__.py  data.py  server.py
mcp-server/tests/: conftest.py  test_data.py  test_rbac.py
shop-backend-api/: .env.example  Dockerfile  README.md  pyproject.toml
shop-backend-api/guardrails_config/admin/: config.yml  main.co
shop-backend-api/guardrails_config/customer/: config.yml  main.co
shop-backend-api/guardrails_config/operator/: config.yml  main.co
shop-backend-api/src/shop_backend_api/: __init__.py  agent.py  config.py  guardrails.py  main.py  nemo_guardrails.py  observability.py
shop-backend-api/tests/: test_config.py  test_guardrails.py
shop-ui/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
shop-ui/src/: App.css  App.tsx  types.ts
shop-ui/src/components/: Chat.tsx  ChatInput.tsx  MessageList.tsx  RoleSelector.tsx
shop-ui/src/hooks/: useChat.ts
