[project]
name = "shop-mcp-server"
version = "0.1.0"
description = "MCP server for shopping chatbot - products, orders, customers"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
shop-mcp-server = "shop_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shop_mcp_server"]
