[project]
name = "shop-backend-api"
version = "0.1.0"
description = "Backend API for shopping chatbot - LangGraph + MCP + Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
shop-backend-api = "shop_backend_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shop_backend_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
